--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<version>2.11.0</version>
 		</dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
