添加适配器模式练习代码

--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,10 @@
 	</properties>
 
 	<modules>
-		<module>dubbo-test</module>
         <module>leetcode</module>
 		<module>atomikos</module>
-    </modules>
+		<module>gephi</module>
+	</modules>
 
 	<dependencies>
 		<dependency>
